--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@sanity/client": "^6.7.1",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.5.0",
     "@stripe/stripe-js": "^2.1.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -24,7 +25,9 @@
     "stripe": "^14.3.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-shopping-cart": "^3.1.8"
+    "use-shopping-cart": "^3.1.8",
+    "sanity": "^3.0.0"
+
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -35,6 +38,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@sanity/eslint-config-studio": "^2.0.1"
   }
 }
